--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
     "theme_color": "#000000",
     "icons": [
         {
-            "src": "favicon.jpg",
+            "src": "favicon.png",
             "sizes": "512x512",
-            "type": "image/jpg"
+            "type": "image/png"
         }
     ]
 }
